--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -89,16 +89,16 @@ body {
   background-color: #232323 !important;
 }
 .bg-success {
-  background-color: #f7ed4a !important;
+  background-color: #006600 !important;
 }
 .bg-info {
-  background-color: #82786e !important;
+  background-color: #006600 !important;
 }
 .bg-warning {
-  background-color: #879a9f !important;
+  background-color: #006600 !important;
 }
 .bg-danger {
-  background-color: #b1a374 !important;
+  background-color: #006600 !important;
 }
 .btn-primary,
 .btn-primary:active {
@@ -122,8 +122,8 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #232323 !important;
-  border-color: #232323 !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
   color: #ffffff !important;
 }
 .btn-secondary:hover,
@@ -131,19 +131,19 @@ body {
 .btn-secondary.focus,
 .btn-secondary.active {
   color: #ffffff !important;
-  background-color: #000000 !important;
-  border-color: #000000 !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #000000 !important;
-  border-color: #000000 !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-info,
 .btn-info:active {
-  background-color: #82786e !important;
-  border-color: #82786e !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
   color: #ffffff !important;
 }
 .btn-info:hover,
@@ -151,39 +151,39 @@ body {
 .btn-info.focus,
 .btn-info.active {
   color: #ffffff !important;
-  background-color: #59524b !important;
-  border-color: #59524b !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-info.disabled,
 .btn-info:disabled {
   color: #ffffff !important;
-  background-color: #59524b !important;
-  border-color: #59524b !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-success,
 .btn-success:active {
-  background-color: #f7ed4a !important;
-  border-color: #f7ed4a !important;
-  color: #3f3c03 !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
+  color: #ffffff !important;
 }
 .btn-success:hover,
 .btn-success:focus,
 .btn-success.focus,
 .btn-success.active {
-  color: #3f3c03 !important;
-  background-color: #eadd0a !important;
-  border-color: #eadd0a !important;
+  color: #ffffff !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-success.disabled,
 .btn-success:disabled {
-  color: #3f3c03 !important;
-  background-color: #eadd0a !important;
-  border-color: #eadd0a !important;
+  color: #ffffff !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-warning,
 .btn-warning:active {
-  background-color: #879a9f !important;
-  border-color: #879a9f !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
   color: #ffffff !important;
 }
 .btn-warning:hover,
@@ -191,19 +191,19 @@ body {
 .btn-warning.focus,
 .btn-warning.active {
   color: #ffffff !important;
-  background-color: #617479 !important;
-  border-color: #617479 !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
   color: #ffffff !important;
-  background-color: #617479 !important;
-  border-color: #617479 !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-danger,
 .btn-danger:active {
-  background-color: #b1a374 !important;
-  border-color: #b1a374 !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
   color: #ffffff !important;
 }
 .btn-danger:hover,
@@ -211,14 +211,14 @@ body {
 .btn-danger.focus,
 .btn-danger.active {
   color: #ffffff !important;
-  background-color: #8b7d4e !important;
-  border-color: #8b7d4e !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #8b7d4e !important;
-  border-color: #8b7d4e !important;
+  background-color: #001a00 !important;
+  border-color: #001a00 !important;
 }
 .btn-white {
   color: #333333 !important;
@@ -294,94 +294,94 @@ body {
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #232323;
-  border-color: #232323;
+  background-color: #006600;
+  border-color: #006600;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #232323 !important;
-  border-color: #232323 !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
   background: none;
-  border-color: #4b453f;
-  color: #4b453f;
+  border-color: #000000;
+  color: #000000;
 }
 .btn-info-outline:hover,
 .btn-info-outline:focus,
 .btn-info-outline.focus,
 .btn-info-outline.active {
   color: #ffffff;
-  background-color: #82786e;
-  border-color: #82786e;
+  background-color: #006600;
+  border-color: #006600;
 }
 .btn-info-outline.disabled,
 .btn-info-outline:disabled {
   color: #ffffff !important;
-  background-color: #82786e !important;
-  border-color: #82786e !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
 }
 .btn-success-outline,
 .btn-success-outline:active {
   background: none;
-  border-color: #d2c609;
-  color: #d2c609;
+  border-color: #000000;
+  color: #000000;
 }
 .btn-success-outline:hover,
 .btn-success-outline:focus,
 .btn-success-outline.focus,
 .btn-success-outline.active {
-  color: #3f3c03;
-  background-color: #f7ed4a;
-  border-color: #f7ed4a;
+  color: #ffffff;
+  background-color: #006600;
+  border-color: #006600;
 }
 .btn-success-outline.disabled,
 .btn-success-outline:disabled {
-  color: #3f3c03 !important;
-  background-color: #f7ed4a !important;
-  border-color: #f7ed4a !important;
+  color: #ffffff !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
 }
 .btn-warning-outline,
 .btn-warning-outline:active {
   background: none;
-  border-color: #55666b;
-  color: #55666b;
+  border-color: #000000;
+  color: #000000;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
 .btn-warning-outline.focus,
 .btn-warning-outline.active {
   color: #ffffff;
-  background-color: #879a9f;
-  border-color: #879a9f;
+  background-color: #006600;
+  border-color: #006600;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
   color: #ffffff !important;
-  background-color: #879a9f !important;
-  border-color: #879a9f !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
 }
 .btn-danger-outline,
 .btn-danger-outline:active {
   background: none;
-  border-color: #7a6e45;
-  color: #7a6e45;
+  border-color: #000000;
+  color: #000000;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
 .btn-danger-outline.focus,
 .btn-danger-outline.active {
   color: #ffffff;
-  background-color: #b1a374;
-  border-color: #b1a374;
+  background-color: #006600;
+  border-color: #006600;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #b1a374 !important;
-  border-color: #b1a374 !important;
+  background-color: #006600 !important;
+  border-color: #006600 !important;
 }
 .btn-black-outline,
 .btn-black-outline:active {
@@ -421,19 +421,19 @@ body {
   color: #232323 !important;
 }
 .text-secondary {
-  color: #232323 !important;
+  color: #006600 !important;
 }
 .text-success {
-  color: #f7ed4a !important;
+  color: #006600 !important;
 }
 .text-info {
-  color: #82786e !important;
+  color: #006600 !important;
 }
 .text-warning {
-  color: #879a9f !important;
+  color: #006600 !important;
 }
 .text-danger {
-  color: #b1a374 !important;
+  color: #006600 !important;
 }
 .text-white {
   color: #ffffff !important;
@@ -451,19 +451,19 @@ a.text-secondary:focus {
 }
 a.text-success:hover,
 a.text-success:focus {
-  color: #d2c609 !important;
+  color: #000000 !important;
 }
 a.text-info:hover,
 a.text-info:focus {
-  color: #4b453f !important;
+  color: #000000 !important;
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #55666b !important;
+  color: #000000 !important;
 }
 a.text-danger:hover,
 a.text-danger:focus {
-  color: #7a6e45 !important;
+  color: #000000 !important;
 }
 a.text-white:hover,
 a.text-white:focus {
@@ -477,13 +477,13 @@ a.text-black:focus {
   background-color: #70c770;
 }
 .alert-info {
-  background-color: #82786e;
+  background-color: #006600;
 }
 .alert-warning {
-  background-color: #879a9f;
+  background-color: #006600;
 }
 .alert-danger {
-  background-color: #b1a374;
+  background-color: #006600;
 }
 .mbr-section-btn a.btn:not(.btn-form):hover,
 .mbr-section-btn a.btn:not(.btn-form):focus {
@@ -507,19 +507,19 @@ a:hover {
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #00e600;
 }
 .mbr-plan-header.bg-info .mbr-plan-subtitle,
 .mbr-plan-header.bg-info .mbr-plan-price-desc {
-  color: #beb8b2;
+  color: #00e600;
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #ced6d8;
+  color: #00e600;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
-  color: #dfd9c6;
+  color: #00e600;
 }
 /* Scroll to top button*/
 .form-control {
@@ -588,7 +588,7 @@ blockquote {
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
   color: #ffffff !important;
-  background: #232323 !important;
+  background: #006600 !important;
   box-shadow: none !important;
 }
 .lazy-bg {
@@ -1055,7 +1055,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rshf6hnJbk .card-title {
-  color: #232323;
+  color: #000000;
   text-align: center;
 }
 .cid-rshf6hnJbk .mbr-text,
@@ -1134,44 +1134,6 @@ section.lazy-placeholder:after {
 }
 .cid-rshi2NRH5y .mbr-text,
 .cid-rshi2NRH5y .mbr-section-btn {
-  color: #232323;
-}
-.cid-rHdV31i2Yi {
-  padding-top: 15px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-rHdV31i2Yi h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-rHdV31i2Yi p {
-  margin-bottom: 0;
-  text-align: justify;
-  padding-top: 1.5rem;
-  padding-top: 2rem;
-}
-.cid-rHdV31i2Yi .mbr-section-btn {
-  padding-top: 2.5rem;
-}
-.cid-rHdV31i2Yi .mbr-section-btn a {
-  margin: 0;
-}
-.cid-rHdV31i2Yi .mbr-text {
-  color: #767676;
-}
-.cid-rHdV31i2Yi .card-wrapper {
-  height: 100%;
-}
-@media (max-width: 767px) {
-  .cid-rHdV31i2Yi .card:not(.last-child) {
-    padding-bottom: 2rem;
-  }
-}
-.cid-rHdV31i2Yi .mbr-text,
-.cid-rHdV31i2Yi .mbr-section-btn {
   color: #232323;
 }
 .cid-rshjbZhhP3 {
