--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1338,39 +1338,42 @@ section.lazy-placeholder:after {
 .cid-sr9vxGY56J P {
   color: #232323;
 }
+.cid-sr9vxGY56J .col-right {
+  text-align: left;
+}
 .cid-rsWlNZOBhe {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rH8qSud5D2 {
+.cid-sLeFpMrFmk {
   padding-top: 45px;
   padding-bottom: 0px;
   background-color: #232323;
 }
 @media (max-width: 767px) {
-  .cid-rH8qSud5D2 .content {
+  .cid-sLeFpMrFmk .content {
     text-align: center;
   }
-  .cid-rH8qSud5D2 .content > div:not(:last-child) {
+  .cid-sLeFpMrFmk .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-rH8qSud5D2 .map {
+.cid-sLeFpMrFmk .map {
   height: 18.75rem;
 }
 @media (max-width: 767px) {
-  .cid-rH8qSud5D2 .footer-lower .copyright {
+  .cid-sLeFpMrFmk .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rH8qSud5D2 .footer-lower hr {
+.cid-sLeFpMrFmk .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rH8qSud5D2 .footer-lower .social-list {
+.cid-sLeFpMrFmk .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1380,37 +1383,37 @@ section.lazy-placeholder:after {
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.cid-rH8qSud5D2 .footer-lower .social-list .mbr-iconfont-social {
+.cid-sLeFpMrFmk .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rH8qSud5D2 .footer-lower .social-list .soc-item {
+.cid-sLeFpMrFmk .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rH8qSud5D2 .footer-lower .social-list a {
+.cid-sLeFpMrFmk .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rH8qSud5D2 .footer-lower .social-list a:hover {
+.cid-sLeFpMrFmk .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rH8qSud5D2 .footer-lower .social-list {
+  .cid-sLeFpMrFmk .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rH8qSud5D2 .google-map {
+.cid-sLeFpMrFmk .google-map {
   height: 25rem;
   position: relative;
 }
-.cid-rH8qSud5D2 .google-map iframe {
+.cid-sLeFpMrFmk .google-map iframe {
   height: 100%;
   width: 100%;
 }
-.cid-rH8qSud5D2 .google-map [data-state-details] {
+.cid-sLeFpMrFmk .google-map [data-state-details] {
   color: #6b6763;
   font-family: Montserrat;
   height: 1.5em;
@@ -1422,10 +1425,10 @@ section.lazy-placeholder:after {
   top: 50%;
   width: 100%;
 }
-.cid-rH8qSud5D2 .google-map[data-state] {
+.cid-sLeFpMrFmk .google-map[data-state] {
   background: #e9e5dc;
 }
-.cid-rH8qSud5D2 .google-map[data-state="loading"] [data-state-details] {
+.cid-sLeFpMrFmk .google-map[data-state="loading"] [data-state-details] {
   display: none;
 }
 .cid-rqUXJ4WIGD .navbar {
