--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3202,6 +3202,80 @@ section.lazy-placeholder:after {
 .cid-rt1AC7zNX6 .mbr-section-btn {
   color: #006600;
 }
+.cid-rt1AC7zNX6 .text1 {
+  color: #000000;
+}
+.cid-sMgOR2C6QN {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sMgOR2C6QN .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-sMgOR2C6QN h4 {
+  font-weight: 500;
+}
+.cid-sMgOR2C6QN p {
+  color: #232323;
+}
+.cid-sMgOR2C6QN .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-sMgOR2C6QN .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-sMgOR2C6QN .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-sMgOR2C6QN .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-sMgOR2C6QN .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-sMgOR2C6QN .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-sMgOR2C6QN .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sMgOR2C6QN .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-sMgOR2C6QN .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-sMgOR2C6QN .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
+.cid-sMgOR2C6QN .text2,
+.cid-sMgOR2C6QN .mbr-section-btn {
+  color: #006600;
+}
 .cid-rsWm5NJw3g {
   padding-top: 30px;
   padding-bottom: 30px;
