--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2956,6 +2956,90 @@ section.lazy-placeholder:after {
 .cid-sKYnEBhrCL .mbr-section-btn {
   color: #006600;
 }
+.cid-sMmw2Xek8D {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sMmw2Xek8D .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-sMmw2Xek8D h4 {
+  font-weight: 500;
+}
+.cid-sMmw2Xek8D p {
+  color: #232323;
+  text-align: justify;
+}
+.cid-sMmw2Xek8D .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-sMmw2Xek8D .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-sMmw2Xek8D .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-sMmw2Xek8D .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-sMmw2Xek8D .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-sMmw2Xek8D .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-sMmw2Xek8D .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+  .cid-sMmw2Xek8D .media-container-row {
+    -webkit-flex-direction: row-reverse;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sMmw2Xek8D .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    padding-top: 1rem;
+    margin-top: 2rem;
+  }
+  .cid-sMmw2Xek8D .media-container-row {
+    -webkit-flex-direction: column-reverse;
+  }
+}
+@media (max-width: 300px) {
+  .cid-sMmw2Xek8D .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-sMmw2Xek8D .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
+.cid-sMmw2Xek8D .text2,
+.cid-sMmw2Xek8D .mbr-section-btn {
+  color: #006600;
+}
 .cid-rt1yjZ1TJk {
   padding-top: 45px;
   padding-bottom: 45px;
